--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node .",
+    "bs": "tsc && node .",
     "postinstall": "tsc"
   },
   "repository": {
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "detritus-client": "^0.16.3",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "fuzzysort": "^1.1.4"
   }
 }
