--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "detritus-client": "^0.16.3",
+    "detritus-client": "detritusjs/client#0.16.4",
     "dotenv": "^10.0.0",
     "fuzzysort": "^1.1.4"
   }
